PIP-233 Auto clean up